--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Crochet Counter App</title>
         <!--Font options below, not set it stone-->
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lacquer&family=Luxurious+Roman&family=Rampart+One&family=Spline+Sans+Mono:wght@300;400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <!--Links to JS and CSS-->
         <link rel="stylesheet" href="css/style.css">
         <script src="js/script.js" defer></script>
